    a coding error
   -Wsuspicious-perform-thru (enabled by default) to check for PERFORM ranges
    that are likely to create unwanted behaviour

** new compiler command line option to list the known runtime exception names
   and fatality `cobc --list-exceptions`

** new compiler command line option -ftcmd to enable printing of the command
   line in the source listing

** the command line options -MT and -MF, which are used for creating a
   dependency list (used copybooks) to be used for inclusion in Makefiles
   or other processes, and which were removed in GnuCOBOL 2 are back in their
   original version; note: their use will be adjusted where they don't match
   GCC's same options in later versions, including addition of -M and -MD

** New -std options:

   gcos            GCOS compatibility
   gcos-strict     GCOS compatibility                - strict

   We define the GCOS dialect based on the COBOL85 standard, with new
   dialect configuration options accompanying each specificity
   introduced by the dialect.

* Important Bugfixes:

** for dialects other than the GnuCOBOL default different reserved "alias" words
   were not usable, for example SYNCHRONIZED or COMPUTATIONAL. This was fixed
   and reserved words updated for the dialects "acu" (to ACUCOBOL-GT 10.4),
   "ibm" (to Enterprise COBOL 6.3) and "mf" (to Micro Focus Visual COBOL 6.0)

** for all "lax" updates SYNC was handled even if commonly ignored by the strict
   dialects, this was fixed so SYNC is ignored depending on the dialect

** COBOL programs compiled with versions before GnuCOBOL 3 that used files with
   ORGANIZATION INDEXED or RELATIVE crashed when executed with newer versions,
   this has been fixed so that all modules compiled with GnuCOBOL 2.2 can be
   executed with GnuCOBOL 3.2

** FUNCTION RANDOM could return 1 in rare cases (more likely on win32),
   it now returns a value in the range 0 <= x < 1, as defined
